versioned_docs/version-23.2/deploy/deployment-option/self-hosted/kubernetes/shared/guides/_start-streaming.mdx
 In this step, you authenticate to Redpanda with the `redpanda-twitch-account` user to create a topic called `twitch_chat`. This topic is the only one that the `redpanda-twitch-account` user has permission to access. Then, you produce messages to the topic, and consume messages from it.

1. Create an alias to simplify the `rpk` commands:

  ```bash
  alias rpk-topic="kubectl -n redpanda exec redpanda-0 -c redpanda -- rpk topic --brokers redpanda-0.redpanda.redpanda.svc.cluster.local.:9093,redpanda-1.redpanda.redpanda.svc.cluster.local.:9093,redpanda-2.redpanda.redpanda.svc.cluster.local.:9093 --tls-truststore /etc/tls/certs/default/ca.crt --tls-enabled --user=redpanda-twitch-account --password=changethispassword --sasl-mechanism SCRAM-SHA-256"
  ```

1. Create a topic called `twitch_chat`:

  ```bash
  rpk-topic create twitch_chat
  ```

  <details>
  <summary>
  Example output
  </summary>

  ```text
  TOPIC       STATUS
  twitch_chat  OK
  ```

  </details>

1. Describe the topic:

  ```bash
  rpk-topic describe twitch_chat
  ```

  <details>
  <summary>
  Example output
  </summary>

  ```text
  SUMMARY
  =======
  NAME        twitch_chat
  PARTITIONS  1
  REPLICAS    1

  CONFIGS
  =======
  KEY                     VALUE                          SOURCE
  cleanup.policy          delete                         DYNAMIC_TOPIC_CONFIG
  compression.type        producer                       DEFAULT_CONFIG
  message.timestamp.type  CreateTime                     DEFAULT_CONFIG
  partition_count         1                              DYNAMIC_TOPIC_CONFIG
  redpanda.datapolicy     function_name:  script_name:   DEFAULT_CONFIG
  redpanda.remote.read    false                          DEFAULT_CONFIG
  redpanda.remote.write   false                          DEFAULT_CONFIG
  replication_factor      1                              DYNAMIC_TOPIC_CONFIG
  retention.bytes         -1                             DEFAULT_CONFIG
  retention.ms            604800000                      DEFAULT_CONFIG
  segment.bytes           1073741824                     DEFAULT_CONFIG
  ```

  </details>

1. Produce a message to the topic:

  ```bash
  rpk-topic produce twitch_chat
  ```

1. Type a message, then press <kbd>Enter</kbd>:

  ```text
  Pandas are fabulous!
  ```

  <details>
  <summary>
  Example output
  </summary>

  ```text
  Produced to partition 0 at offset 0 with timestamp 1663282629789.
  ```

  </details>

1. Press <kbd>Ctrl</kbd>+<kbd>C</kbd> to finish producing messages to the topic.

1. Consume one message from the topic:

  ```bash
  rpk-topic consume twitch_chat --num 1
  ```

  <details>
  <summary>
  Example output
  </summary>

  Your message is displayed along with its metadata,:

  ```json
  {
    "topic": "twitch_chat",
    "value": "Pandas are fabulous!",
    "timestamp": 1663282629789,
    "partition": 0,
    "offset": 0
  }
  ```

  </details>